# human-rating-platform

./: .gitignore  README.md  docker-compose.yml  sample_questions.csv
.github/workflows/: main.yml
backend/: .env.example  auth.py  config.py  config.toml  logging_config.py  main.py  models.py  pyproject.toml  schemas.py
backend/alembic/versions/: 20260309000000_add_delegation_support.py  20260318000000_add_assistance_infrastructure.py  20260407000000_add_document_search_infrastructure.py  20260505000000_add_question_parent_id.py
backend/routers/: admin.py  delegation.py  deps.py  raters.py
backend/scripts/: seed_dev.py
backend/services/: __init__.py  authn.py  documents.py  openai_client.py  queries.py
backend/services/admin/: __init__.py  experiments.py  exports.py  prolific.py  queries.py  rounds.py  uploads.py
backend/services/assistance/: __init__.py  base.py  operations.py  registry.py
backend/services/assistance/methods/: none.py  top_n.py
backend/services/assistance/methods/human_as_a_tool/: decomposer.py  method.py
backend/services/rater/: mappers.py  operations.py  queries.py  session_token.py  validators.py
backend/tests/: conftest.py  test_admin_auth.py  test_config.py  test_delegation_auth.py  test_logging_config.py
backend/tests/e2e/: test_characterization.py
frontend/: .env.example  package-lock.json  package.json
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AdminView.tsx  AssistancePanel.tsx  DelegationView.tsx  DocumentSearchPanel.tsx  LandingPage.tsx  (+4 more)
(+2 files in other folders)
